--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,17 @@
+html,
+body {
+  height: 100%;
+}
 body {
   margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  background-color: #2c88dc;
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.mat-mdc-form-field-flex {
+  align-items: center !important;
+}
+
+input::placeholder {
+  color: gray !important;
+}
