Hook up the inputs to change values

--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -1,5 +1,7 @@
 <div id="form_graybox">
   <div id="form_contents">
+    {{ jobsPerMonth }}
+    {{ revenuePercent }}
     <div>
       <h2>Values</h2>
       <div id="form_flexbox">
@@ -8,42 +10,49 @@
           label="Jobs per Month"
           placeholder="123"
           icon="mode_edit"
+          (change)="updateJobsPerMonth($event)"
         ></app-form-input-field>
         <app-form-input-field
           prefix=""
           label="Payroll / Revenue Percent"
           placeholder="40"
           icon="percent"
+          (change)="updateRevenuePercent($event)"
         ></app-form-input-field>
         <app-form-input-field
           prefix="$"
           label="Bill rate per Job"
           placeholder="175"
           icon="mode_edit"
+          (change)="updateBillRatePerJob($event)"
         ></app-form-input-field>
         <app-form-input-field
           prefix=""
           label="Recurring Homes Lost/Month"
           placeholder="10"
           icon="percent"
+          (change)="updateRecurringHomesLostPerMonth($event)"
         ></app-form-input-field>
         <app-form-input-field
           prefix=""
           label="Net Profit"
           placeholder="10"
           icon="percent"
+          (change)="updateNetProfit($event)"
         ></app-form-input-field>
         <app-form-input-field
           prefix=""
           label="% Rate Increase"
           placeholder="10"
           icon="percent"
+          (change)="updateRateIncrease($event)"
         ></app-form-input-field>
         <app-form-input-field
           prefix=""
           label="% Expected Job Loss"
           placeholder="10"
           icon="percent"
+          (change)="updateExpectedJobLoss($event)"
         ></app-form-input-field>
       </div>
       <div id="form_buttons_container">
