Finish filling in with dummy data

--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -59,6 +59,7 @@
     </div>
   </div>
 </div>
+<h2 style="padding: 20px 20px 0px">Outcomes</h2>
 <app-overall-table
   jobsPerMonth="{{ jobsPerMonth }}"
   revenuePercent="{{ revenuePercent }}"
@@ -70,3 +71,7 @@
 ></app-overall-table>
 
 <app-rate-increase-table></app-rate-increase-table>
+
+<app-lower-pay-roll-revenue-perc-table></app-lower-pay-roll-revenue-perc-table>
+
+<app-lower-customer-turnover-table></app-lower-customer-turnover-table>
