--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,3 +29,7 @@ input::placeholder {
 .mat-mdc-form-field .mat-mdc-floating-label.mdc-floating-label {
   height: 38px !important;
 }
+
+.mat-elevation-z8 {
+  margin-bottom: 20px;
+}
