--- a/src/app/components/lower-pay-roll-revenue-perc-table/lower-pay-roll-revenue-perc-table.component.html
+++ b/src/app/components/lower-pay-roll-revenue-perc-table/lower-pay-roll-revenue-perc-table.component.html
@@ -1,1 +1,27 @@
-<p>lower-pay-roll-revenue-perc-table works!</p>
+<div>
+  <div class="results_section_hr"><h3>Lower Payroll/Revenue</h3></div>
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>Measurement</th>
+      <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="current">
+      <th mat-header-cell *matHeaderCellDef>Current</th>
+      <td mat-cell *matCellDef="let element">{{ element.current }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="hourly">
+      <th mat-header-cell *matHeaderCellDef>Hourly or Allowed Hour</th>
+      <td mat-cell *matCellDef="let element">{{ element.hourly }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="feeSplit">
+      <th mat-header-cell *matHeaderCellDef>Fee Split</th>
+      <td mat-cell *matCellDef="let element">{{ element.feeSplit }}</td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
+</div>
