--- a/src/app/components/rate-increase-table/rate-increase-table.component.html
+++ b/src/app/components/rate-increase-table/rate-increase-table.component.html
@@ -1,30 +1,23 @@
 <div>
   <div class="results_section_hr"><h3>Rate Increase</h3></div>
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-    <!--- Note that these columns can be defined in any order.
-        The actual rendered columns are set as a property on the row definition" -->
-
-    <!-- name Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef>Measurement</th>
       <td mat-cell *matCellDef="let element">{{ element.name }}</td>
     </ng-container>
 
-    <!-- Name Column -->
     <ng-container matColumnDef="current">
       <th mat-header-cell *matHeaderCellDef>Current</th>
       <td mat-cell *matCellDef="let element">{{ element.current }}</td>
     </ng-container>
 
-    <!-- hourly Column -->
     <ng-container matColumnDef="hourly">
-      <th mat-header-cell *matHeaderCellDef>hourly</th>
+      <th mat-header-cell *matHeaderCellDef>Hourly or Allowed Hour</th>
       <td mat-cell *matCellDef="let element">{{ element.hourly }}</td>
     </ng-container>
 
-    <!-- feeSplit Column -->
     <ng-container matColumnDef="feeSplit">
-      <th mat-header-cell *matHeaderCellDef>feeSplit</th>
+      <th mat-header-cell *matHeaderCellDef>Fee Split</th>
       <td mat-cell *matCellDef="let element">{{ element.feeSplit }}</td>
     </ng-container>
 
