--- a/src/app/components/banner/banner.component.scss
+++ b/src/app/components/banner/banner.component.scss
@@ -1,8 +1,11 @@
 #header {
+  position: fixed;
+  z-index: 3;
+  top: 0px;
+  left: 0px;
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative;
   width: 100%;
   height: 78px;
   flex-shrink: 0;
@@ -20,5 +23,25 @@
     top: 0px;
     left: 0px;
     height: inherit;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  #header {
+    justify-content: flex-end;
+    padding: 0px 10px 0px 10px;
+    width: calc(100% - 20px);
+    #header_text {
+      font-weight: initial;
+      margin: 0px;
+      font-size: 16px;
+    }
+
+    #maidcentral_logo {
+      position: absolute;
+      height: 75%;
+      top: calc(25% / 2);
+      left: 0px;
+    }
   }
 }
