--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,7 +21,7 @@ input::placeholder {
 }
 
 .mat-mdc-raised-button.mat-primary {
-  background-color: #0288d1 !important;
+  background-color: #36709f !important;
 }
 
 .mat-mdc-text-field-wrapper,
@@ -31,5 +31,5 @@ input::placeholder {
 }
 
 .mat-elevation-z8 {
-  margin-bottom: 20px;
+  margin-bottom: 40px;
 }
