--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -82,3 +82,7 @@
 
   <app-lower-customer-turnover-table></app-lower-customer-turnover-table>
 </div>
+
+<div id="line_chart_container">
+  <app-line-chart></app-line-chart>
+</div>
