Add pdf download button, add outlines to white buttons

--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -65,6 +65,7 @@
           ></app-toggle-form-open-button
         ></span>
         <app-form-submit-button></app-form-submit-button>
+        <app-download-pdf-button></app-download-pdf-button>
       </div>
     </div>
   </div>
@@ -75,11 +76,8 @@
 
   <!-- Table sections. -->
   <app-overall-table></app-overall-table>
-
   <app-rate-increase-table></app-rate-increase-table>
-
   <app-lower-pay-roll-revenue-perc-table></app-lower-pay-roll-revenue-perc-table>
-
   <app-lower-customer-turnover-table></app-lower-customer-turnover-table>
 </div>
 
