--- a/src/app/components/form-input-field/form-input-field.component.html
+++ b/src/app/components/form-input-field/form-input-field.component.html
@@ -1,4 +1,8 @@
-<mat-form-field class="form_input" appearance="outline" floatLabel="always">
+<mat-form-field
+  class="form_input {{ size }}"
+  appearance="outline"
+  floatLabel="always"
+>
   <span matPrefix style="margin-left: 5px">{{ prefix }}</span>
   <mat-label>{{ label }}</mat-label>
   <input type="number" matInput placeholder="{{ placeholder }}" />
