Fix scaling issues for table and form overflow on mobile devices

--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -1,88 +1,91 @@
 <div id="form_graybox">
   <div id="form_contents">
     <div>
-      <div [ngClass]="{ open: formOpen, closed: !formOpen }">
-        <h2>Values</h2>
+      <div id="form_inputs">
+        <div [ngClass]="{ open: formOpen, closed: !formOpen }">
+          <h2>Values</h2>
 
-        <!-- The input fields. -->
-        <div id="form_flexbox" class="flexbox">
-          <app-form-input-field
-            prefix=""
-            label="Jobs per Month"
-            placeholder="500"
-            icon="mode_edit"
-            size="small"
-            (change)="updateJobsPerMonth($event)"
-          ></app-form-input-field>
-          <app-form-input-field
-            prefix=""
-            label="Payroll / Revenue Percent"
-            placeholder="40"
-            icon="percent"
-            size="small"
-            (change)="updateRevenuePercent($event)"
-          ></app-form-input-field>
-          <app-form-input-field
-            prefix="$"
-            label="Bill rate per Job"
-            placeholder="175"
-            icon="mode_edit"
-            size="small"
-            (change)="updateBillRatePerJob($event)"
-          ></app-form-input-field>
-          <app-form-input-field
-            prefix=""
-            label="Recurring Homes Lost/Month"
-            placeholder="10"
-            icon="percent"
-            size="small"
-            (change)="updateRecurringHomesLostPerMonth($event)"
-          ></app-form-input-field>
-          <app-form-input-field
-            prefix=""
-            label="Net Profit"
-            placeholder="10"
-            icon="percent"
-            size="small"
-            (change)="updateNetProfit($event)"
-          ></app-form-input-field>
-          <app-form-input-field
-            prefix=""
-            label="% Rate Increase"
-            placeholder="10"
-            icon="percent"
-            size="small"
-            (change)="updateRateIncrease($event)"
-          ></app-form-input-field>
-          <app-form-input-field
-            prefix=""
-            label="% Expected Job Loss"
-            placeholder="10"
-            icon="percent"
-            size="small"
-            (change)="updateExpectedJobLoss($event)"
-          ></app-form-input-field>
-        </div>
-        <hr style="margin-bottom: 30px" />
-        <div class="flexbox">
-          <app-form-input-field
-            class="lower_form_input"
-            prefix=""
-            label="Lower Payroll/Revenue Percent by..."
-            placeholder="5"
-            icon="percent"
-            size="large"
-            (change)="updateLowerPayrollPerc($event)"
-          ></app-form-input-field>
-          <app-form-input-field
-            class="lower_form_input"
-            prefix=""
-            label="Improve Recurring Homes Lost/Month by..."
-            placeholder="10"
-            icon="percent"
-            size="large"
-            (change)="updateImproveHomesLostPerc($event)"
-          ></app-form-input-field>
+          <!-- The input fields. -->
+          <div id="form_flexbox" class="flexbox">
+            <app-form-input-field
+              prefix=""
+              label="Jobs per Month"
+              placeholder="500"
+              icon="mode_edit"
+              size="small"
+              (change)="updateJobsPerMonth($event)"
+            ></app-form-input-field>
+            <app-form-input-field
+              prefix=""
+              label="Payroll / Revenue Percent"
+              placeholder="40"
+              icon="percent"
+              size="small"
+              (change)="updateRevenuePercent($event)"
+            ></app-form-input-field>
+            <app-form-input-field
+              prefix="$"
+              label="Bill rate per Job"
+              placeholder="175"
+              icon="mode_edit"
+              size="small"
+              (change)="updateBillRatePerJob($event)"
+            ></app-form-input-field>
+            <app-form-input-field
+              prefix=""
+              label="Recurring Homes Lost/Month"
+              placeholder="10"
+              icon="percent"
+              size="small"
+              (change)="updateRecurringHomesLostPerMonth($event)"
+            ></app-form-input-field>
+            <app-form-input-field
+              prefix=""
+              label="Net Profit"
+              placeholder="10"
+              icon="percent"
+              size="small"
+              (change)="updateNetProfit($event)"
+            ></app-form-input-field>
+            <app-form-input-field
+              prefix=""
+              label="% Rate Increase"
+              placeholder="10"
+              icon="percent"
+              size="small"
+              (change)="updateRateIncrease($event)"
+            ></app-form-input-field>
+            <app-form-input-field
+              prefix=""
+              label="% Expected Job Loss"
+              placeholder="10"
+              icon="percent"
+              size="small"
+              (change)="updateExpectedJobLoss($event)"
+            ></app-form-input-field>
+          </div>
+
+          <hr style="margin-bottom: 30px" />
+          <div class="flexbox">
+            <app-form-input-field
+              class="lower_form_input"
+              prefix=""
+              label="Lower Payroll/Revenue Percent by..."
+              placeholder="5"
+              icon="percent"
+              size="large"
+              (change)="updateLowerPayrollPerc($event)"
+            ></app-form-input-field>
+            <app-form-input-field
+              class="lower_form_input"
+              prefix=""
+              label="Improve Recurring Homes Lost/Month by..."
+              placeholder="10"
+              icon="percent"
+              size="large"
+              (change)="updateImproveHomesLostPerc($event)"
+            ></app-form-input-field>
+          </div>
         </div>
       </div>
       <div id="form_buttons_container">
