--- a/src/app/components/overall-table/overall-table.component.html
+++ b/src/app/components/overall-table/overall-table.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="table">
   <div class="results_section_hr"><h3>Overall</h3></div>
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
     <ng-container matColumnDef="name">
