--- a/src/app/components/lower-customer-turnover-table/lower-customer-turnover-table.component.html
+++ b/src/app/components/lower-customer-turnover-table/lower-customer-turnover-table.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="table">
   <div class="results_section_hr"><h3>Lower Customer Turnover</h3></div>
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
     <ng-container matColumnDef="name">
